--- a/.github/workflows/integrate-vite-app.yml
+++ b/.github/workflows/integrate-vite-app.yml
@@ -36,5 +36,6 @@ jobs:
         with:
           node-version-file: .node-version
       - run: npm install
+      - run: npx playwright install --with-deps
       - run: npm run test
 
